--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "socket.io": "^2.1.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
