--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
+    "@angular/animations": "6.0.5",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "npm": "^6.1.0",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.1",
+    "ionicons": "4.2.0",
+    "npm": "6.1.0",
+    "rxjs": "6.2.1",
+    "rxjs-compat": "6.2.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
+    "@ionic/app-scripts": "3.1.10",
     "socket.io": "^2.1.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.9.2"
   },
   "description": "An Ionic project"
 }
